# FineTunedModelApi-FastAPI

./: .gitignore  README.md  api.py  pyproject.toml
