[tool.poetry]
name = "finetunedmodelapi"
version = "0.1.0"
description = "fine-tuned-model-api"
authors = ["name = Huy Duong, email = duongquanghuy2202@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
fastapi = ">=0.119.1,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
torch = ">=2.9.0,<3.0.0"
transformers = ">=4.57.1,<5.0.0"
peft = ">=0.17.1,<0.18.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
